--- a/package.json
+++ b/package.json
@@ -3,14 +3,19 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "node ./bin/www",
+    "dev": "nodemon node start"
   },
   "dependencies": {
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
+    "dotenv": "^16.1.4",
     "express": "~4.16.1",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "mongoose": "^7.2.2",
+    "mongoose-role": "^3.0.5",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.22"
   }
 }
