--- a/package.json
+++ b/package.json
@@ -7,15 +7,20 @@
     "dev": "nodemon node start"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
+    "connect-mongo": "^5.0.0",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.1.4",
     "express": "~4.16.1",
+    "express-session": "^1.17.3",
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
-    "mongoose": "^7.2.2",
+    "mongoose": "^6.2.9",
     "mongoose-role": "^3.0.5",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.22"
+    "nodemon": "^2.0.22",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
