--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "hbs": "~4.0.4",
     "http-errors": "~1.6.3",
     "mongoose": "^6.2.9",
-    "mongoose-role": "^3.0.5",
+    "mongoose-autopopulate": "^1.0.1",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.22",
     "passport": "^0.6.0",
